Migration queries to bun

--- a/configs/application.yaml
+++ b/configs/application.yaml
@@ -14,4 +14,4 @@ db:
   timezone: "America/Sao_Paulo"
   timeout: 60
   migrationPath: "configs/migrations"
-  migrationTable: "gopg_migrations"
+  migrationTable: "bun_migrations"
